--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <h1>to do list</h1>
+    <p>percobaan</p>
     <input type="text" id="todo">
     <button onclick="func_add()">add</button>
     <ul id="mylist"></ul>
